docs: game and planning agents

--- a/isolation_player.ipynb
+++ b/isolation_player.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Game-playing Agent\n",
     "\n",
-    "Notebook version solving the project '**Build a Game-playing Agent**' from Udacity's Artificial Intelligence Nanodegree project <br>\n",
+    "Notebook version solving the project '**Build a Game-playing Agent**' from Udacity's Artificial Intelligence Nanodegree <br>\n",
     "Source: https://github.com/udacity/AIND-Isolation\n",
     "\n",
     "**Goal**: Implement an effective adversarial search agent to play the game **Isolation**\n",
