--- a/planning_agent.ipynb
+++ b/planning_agent.ipynb
@@ -1,10 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Planning Search Agent\n",
+    "\n",
+    "Notebook version solving the project 'Implement a Planning Search' from Udacity's Artificial Intelligence Nanodegree <br>\n",
+    "\n",
+    "Source: https://github.com/udacity/AIND-Planning\n",
+    "\n",
+    "Goal: Solve deterministic logistics planning problems for an Air Cargo transport system using a planning search agent\n",
+    "\n",
+    "\n",
+    "All problems are in the Air Cargo domain.  They have the same action schema defined, but different initial states and goals.\n",
+    "\n",
+    "- Air Cargo Action Schema:\n",
+    "```\n",
+    "Action(Load(c, p, a),\n",
+    "\tPRECOND: At(c, a) ∧ At(p, a) ∧ Cargo(c) ∧ Plane(p) ∧ Airport(a)\n",
+    "\tEFFECT: ¬ At(c, a) ∧ In(c, p))\n",
+    "Action(Unload(c, p, a),\n",
+    "\tPRECOND: In(c, p) ∧ At(p, a) ∧ Cargo(c) ∧ Plane(p) ∧ Airport(a)\n",
+    "\tEFFECT: At(c, a) ∧ ¬ In(c, p))\n",
+    "Action(Fly(p, from, to),\n",
+    "\tPRECOND: At(p, from) ∧ Plane(p) ∧ Airport(from) ∧ Airport(to)\n",
+    "\tEFFECT: ¬ At(p, from) ∧ At(p, to))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Planning Graph nodes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -205,9 +241,24 @@
     "    if type(node1) != type(node2):\n",
     "        raise TypeError('Attempted to mutex two nodes of different types')\n",
     "    node1.mutex.add(node2)\n",
-    "    node2.mutex.add(node1)\n",
-    "\n",
-    "\n",
+    "    node2.mutex.add(node1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Planning Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "class PlanningGraph():\n",
     "    \"\"\"\n",
     "    A planning graph as described in chapter 10 of the AIMA text. The planning\n",
@@ -557,9 +608,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Air Cargo Problem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from planning_agent.aimacode.logic import PropKB\n",
@@ -777,9 +837,22 @@
     "        # Unsatisfied goals are the ones not found in the clauses of PropKB() for the current state\n",
     "        count = len(set(self.goal) - set(kb.clauses))\n",
     "        # print(\"Current_state: \", kb.clauses, \" Goal state: \", self.goal)\n",
-    "        return count\n",
-    "\n",
-    "\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem definition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def air_cargo_p1() -> AirCargoProblem:\n",
     "    cargos = ['C1', 'C2']\n",
     "    planes = ['P1', 'P2']\n",
@@ -896,6 +969,46 @@
     "            expr('At(C4, SFO)'),\n",
     "            ]\n",
     "    return AirCargoProblem(cargos, planes, airports, init, goal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Problem 1 initial state and goal:\n",
+    "```\n",
+    "Init(At(C1, SFO) ∧ At(C2, JFK) \n",
+    "\t∧ At(P1, SFO) ∧ At(P2, JFK) \n",
+    "\t∧ Cargo(C1) ∧ Cargo(C2) \n",
+    "\t∧ Plane(P1) ∧ Plane(P2)\n",
+    "\t∧ Airport(JFK) ∧ Airport(SFO))\n",
+    "Goal(At(C1, JFK) ∧ At(C2, SFO))\n",
+    "```\n",
+    "- Problem 2 initial state and goal:\n",
+    "```\n",
+    "Init(At(C1, SFO) ∧ At(C2, JFK) ∧ At(C3, ATL) \n",
+    "\t∧ At(P1, SFO) ∧ At(P2, JFK) ∧ At(P3, ATL) \n",
+    "\t∧ Cargo(C1) ∧ Cargo(C2) ∧ Cargo(C3)\n",
+    "\t∧ Plane(P1) ∧ Plane(P2) ∧ Plane(P3)\n",
+    "\t∧ Airport(JFK) ∧ Airport(SFO) ∧ Airport(ATL))\n",
+    "Goal(At(C1, JFK) ∧ At(C2, SFO) ∧ At(C3, SFO))\n",
+    "```\n",
+    "- Problem 3 initial state and goal:\n",
+    "```\n",
+    "Init(At(C1, SFO) ∧ At(C2, JFK) ∧ At(C3, ATL) ∧ At(C4, ORD) \n",
+    "\t∧ At(P1, SFO) ∧ At(P2, JFK) \n",
+    "\t∧ Cargo(C1) ∧ Cargo(C2) ∧ Cargo(C3) ∧ Cargo(C4)\n",
+    "\t∧ Plane(P1) ∧ Plane(P2)\n",
+    "\t∧ Airport(JFK) ∧ Airport(SFO) ∧ Airport(ATL) ∧ Airport(ORD))\n",
+    "Goal(At(C1, JFK) ∧ At(C3, JFK) ∧ At(C2, SFO) ∧ At(C4, SFO))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving the problem"
    ]
   },
   {
