--- a/planning_agent.ipynb
+++ b/planning_agent.ipynb
@@ -6,16 +6,15 @@
    "source": [
     "# Planning Search Agent\n",
     "\n",
-    "Notebook version solving the project 'Implement a Planning Search' from Udacity's Artificial Intelligence Nanodegree <br>\n",
+    "Notebook version solving the project **'Implement a Planning Search'** from Udacity's Artificial Intelligence Nanodegree <br>\n",
     "\n",
     "Source: https://github.com/udacity/AIND-Planning\n",
     "\n",
-    "Goal: Solve deterministic logistics planning problems for an Air Cargo transport system using a planning search agent\n",
+    "**Goal**: Solve deterministic logistics planning problems for an Air Cargo transport system using a planning search agent\n",
     "\n",
     "\n",
-    "All problems are in the Air Cargo domain.  They have the same action schema defined, but different initial states and goals.\n",
+    "All problems are in the Air Cargo domain.  They have the same action schema defined, but different initial states and goals:\n",
     "\n",
-    "- Air Cargo Action Schema:\n",
     "```\n",
     "Action(Load(c, p, a),\n",
     "\tPRECOND: At(c, a) ∧ At(p, a) ∧ Cargo(c) ∧ Plane(p) ∧ Airport(a)\n",
@@ -38,10 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from planning_agent.aimacode.planning import Action\n",
@@ -227,21 +224,7 @@
     "                   and (self.action.args == other.action.args)\n",
     "\n",
     "    def __hash__(self):\n",
-    "        return hash(self.action.name) ^ hash(self.action.args)\n",
-    "\n",
-    "\n",
-    "def mutexify(node1: PgNode, node2: PgNode):\n",
-    "    \"\"\" adds sibling nodes to each other's mutual exclusion (mutex) set. These should be sibling nodes!\n",
-    "\n",
-    "    :param node1: PgNode (or inherited PgNode_a, PgNode_s types)\n",
-    "    :param node2: PgNode (or inherited PgNode_a, PgNode_s types)\n",
-    "    :return:\n",
-    "        node mutex sets modified\n",
-    "    \"\"\"\n",
-    "    if type(node1) != type(node2):\n",
-    "        raise TypeError('Attempted to mutex two nodes of different types')\n",
-    "    node1.mutex.add(node2)\n",
-    "    node2.mutex.add(node1)"
+    "        return hash(self.action.name) ^ hash(self.action.args)\n"
    ]
   },
   {
@@ -253,12 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "def mutexify(node1: PgNode, node2: PgNode):\n",
+    "    \"\"\" adds sibling nodes to each other's mutual exclusion (mutex) set. These should be sibling nodes!\n",
+    "    :param node1: PgNode (or inherited PgNode_a, PgNode_s types)\n",
+    "    :param node2: PgNode (or inherited PgNode_a, PgNode_s types)\n",
+    "    :return:\n",
+    "        node mutex sets modified\n",
+    "    \"\"\"\n",
+    "    if type(node1) != type(node2):\n",
+    "        raise TypeError('Attempted to mutex two nodes of different types')\n",
+    "    node1.mutex.add(node2)\n",
+    "    node2.mutex.add(node1)\n",
+    "\n",
+    "\n",
     "class PlanningGraph():\n",
     "    \"\"\"\n",
     "    A planning graph as described in chapter 10 of the AIMA text. The planning\n",
@@ -365,13 +361,6 @@
     "        :return:\n",
     "            adds A nodes to the current level in self.a_levels[level]\n",
     "        \"\"\"\n",
-    "        # TODO add action A level to the planning graph as described in the Russell-Norvig text (OK)\n",
-    "        # 1. determine what actions to add and create those PgNode_a objects\n",
-    "        # 2. connect the nodes to the previous S literal level\n",
-    "        # for example, the A0 level will iterate through all possible actions for the problem and add a PgNode_a to a_levels[0]\n",
-    "        #   set iff all prerequisite literals for the action hold in S0.  This can be accomplished by testing\n",
-    "        #   to see if a proposed PgNode_a has prenodes that are a subset of the previous S level.  Once an\n",
-    "        #   action node is added, it MUST be connected to the S node instances in the appropriate s_level set.\n",
     "\n",
     "        self.a_levels.append(set()) # set of a_nodes\n",
     "        for a in self.all_actions:\n",
@@ -392,14 +381,6 @@
     "        :return:\n",
     "            adds S nodes to the current level in self.s_levels[level]\n",
     "        \"\"\"\n",
-    "        # TODO add literal S level to the planning graph as described in the Russell-Norvig text (OK)\n",
-    "        # 1. determine what literals to add\n",
-    "        # 2. connect the nodes\n",
-    "        # for example, every A node in the previous level has a list of S nodes in effnodes that represent the effect\n",
-    "        #   produced by the action.  These literals will all be part of the new S level.  Since we are working with sets, they\n",
-    "        #   may be \"added\" to the set without fear of duplication.  However, it is important to then correctly create and connect\n",
-    "        #   all of the new S nodes as children of all the A nodes that could produce them, and likewise add the A nodes to the\n",
-    "        #   parent sets of the S nodes\n",
     "\n",
     "        self.s_levels.append(set())  # set of s_nodes\n",
     "        for a in self.a_levels[level-1]:\n",
@@ -464,7 +445,6 @@
     "        :param node_a2: PgNode_a\n",
     "        :return: bool\n",
     "        \"\"\"\n",
-    "        # TODO test for Inconsistent Effects between nodes (OK)\n",
     "\n",
     "        # Create 1 set with all the adding effects and 1 set with all the removing effects.\n",
     "        # (a single action cannot result in inconsistent effects)\n",
@@ -487,7 +467,6 @@
     "        :param node_a2: PgNode_a\n",
     "        :return: bool\n",
     "        \"\"\"\n",
-    "        # TODO test for Interference between nodes (OK)\n",
     "\n",
     "        # Similar implementation of inconsistent_effects_mutex but crossing the adding/removing effect of each action\n",
     "        #  with the negative/positive precondition of the other.\n",
@@ -510,13 +489,6 @@
     "        :param node_a2: PgNode_a\n",
     "        :return: bool\n",
     "        \"\"\"\n",
-    "\n",
-    "        # # TODO test for Competing Needs between nodes (OK)\n",
-    "\n",
-    "        # The following implementation does not pass the tests since mutual exclusion of parents are required:\n",
-    "        # preconds_pos = node_a1.action.precond_pos + node_a2.action.precond_pos\n",
-    "        # preconds_neg = node_a1.action.precond_neg + node_a2.action.precond_neg\n",
-    "        # return bool(set(preconds_pos) & set(preconds_neg))\n",
     "\n",
     "        # Create a list with the parents of one action node that are mutually exclusive with the parents of the other\n",
     "        #  and return True if the list is not empty\n",
@@ -556,7 +528,6 @@
     "        :param node_s2: PgNode_s\n",
     "        :return: bool\n",
     "        \"\"\"\n",
-    "        # TODO test for negation between nodes (OK)\n",
     "\n",
     "        # Mutual exclusive nodes have the same 'symbol' and different 'is_pos' attributes\n",
     "        return (node_s1.symbol == node_s2.symbol) and (node_s1.is_pos != node_s2.is_pos)\n",
@@ -577,7 +548,6 @@
     "        :param node_s2: PgNode_s\n",
     "        :return: bool\n",
     "        \"\"\"\n",
-    "        # TODO test for Inconsistent Support between nodes (OK)\n",
     "\n",
     "        # Get a list with the parents of one node that are not mutually exclusive with at least one parent of the other\n",
     "        # Here the inconsistent is detected if the list is empty (none of the actions can lead to these pair of nodes at\n",
@@ -592,9 +562,8 @@
     "        :return: int\n",
     "        \"\"\"\n",
     "        level_sum = 0\n",
-    "        # TODO implement\n",
-    "        # for each goal in the problem, determine the level cost, then add them together\n",
     "\n",
+    "        # for each goal in the problem, determine the level cost, then add them together\n",
     "        remaining_goals = set(self.problem.goal) # remaining goals to find to determine the level cost\n",
     "        # Search for all the goals simultaneously from level 0\n",
     "        for level in range(len(self.s_levels)+1):\n",
@@ -616,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -627,7 +596,6 @@
     "from planning_agent.aimacode.search import Node, Problem\n",
     "from planning_agent.aimacode.utils import expr\n",
     "from planning_agent.lp_utils import FluentState, encode_state, decode_state\n",
-    "# from my_planning_graph import PlanningGraph\n",
     "\n",
     "\n",
     "class AirCargoProblem(Problem):\n",
@@ -664,19 +632,11 @@
     "            list of Action objects\n",
     "        \"\"\"\n",
     "\n",
-    "        # TODO create concrete Action objects based on the domain action schema for: Load, Unload, and Fly (OK)\n",
-    "        # concrete actions definition: specific literal action that does not include variables as with the schema\n",
-    "        # for example, the action schema 'Load(c, p, a)' can represent the concrete actions 'Load(C1, P1, SFO)'\n",
-    "        # or 'Load(C2, P2, JFK)'.  The actions for the planning problem must be concrete because the problems in\n",
-    "        # forward search and Planning Graphs must use Propositional Logic\n",
-    "\n",
     "        def load_actions():\n",
     "            \"\"\"Create all concrete Load actions and return a list\n",
     "            :return: list of Action objects\n",
     "            \"\"\"\n",
     "            loads = []\n",
-    "\n",
-    "            # TODO create all load ground actions from the domain Load action (OK)\n",
     "\n",
     "            for c in self.cargos:\n",
     "                for p in self.planes:\n",
@@ -697,8 +657,6 @@
     "            :return: list of Action objects\n",
     "            \"\"\"\n",
     "            unloads = []\n",
-    "\n",
-    "            # TODO create all Unload ground actions from the domain Unload action (OK)\n",
     "\n",
     "            for c in self.cargos:\n",
     "                for p in self.planes:\n",
@@ -743,9 +701,7 @@
     "            e.g. 'FTTTFF'\n",
     "        :return: list of Action objects\n",
     "        \"\"\"\n",
-    "        # TODO implement\n",
     "\n",
-    "        # Same implementation as in the cake example:\n",
     "        possible_actions = []\n",
     "        kb = PropKB()\n",
     "        kb.tell(decode_state(state, self.state_map).pos_sentence())\n",
@@ -770,9 +726,6 @@
     "        :param action: Action applied\n",
     "        :return: resulting state after action\n",
     "        \"\"\"\n",
-    "        # TODO implement\n",
-    "\n",
-    "        # Same implementation as in the cake example:\n",
     "\n",
     "        new_state = FluentState([], [])\n",
     "        # Used the same implementation as cake example:\n",
@@ -827,10 +780,9 @@
     "        conditions by ignoring the preconditions required for an action to be\n",
     "        executed.\n",
     "        \"\"\"\n",
-    "        # TODO implement (see Russell-Norvig Ed-3 10.2.3  or Russell-Norvig Ed-2 11.2) (OK)\n",
     "\n",
-    "        # Note: For both 'have cake' and 'air cargo' problems we assume that the number of steps required to solve the\n",
-    "        # relaxed ignore preconditions problem is equal to the number of unsatisfied goals.\n",
+    "        # Note: We assume that the number of steps required to solve the relaxed ignore preconditions problem\n",
+    "        # is equal to the number of unsatisfied goals.\n",
     "        # Thus no action results in multiple goals and no action undoes the effects of other actions\n",
     "        kb = PropKB()\n",
     "        kb.tell(decode_state(node.state, self.state_map).pos_sentence())\n",
@@ -844,12 +796,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem definition"
+    "## Scenarios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +831,6 @@
     "\n",
     "\n",
     "def air_cargo_p2() -> AirCargoProblem:\n",
-    "    # TODO implement Problem 2 definition (OK)\n",
     "\n",
     "    cargos = ['C1', 'C2', 'C3']\n",
     "    planes = ['P1', 'P2', 'P3']\n",
@@ -922,7 +873,6 @@
     "\n",
     "\n",
     "def air_cargo_p3() -> AirCargoProblem:\n",
-    "    # TODO implement Problem 3 definition (OK)\n",
     "\n",
     "    cargos = ['C1', 'C2', 'C3', 'C4']\n",
     "    planes = ['P1', 'P2']\n",
@@ -1013,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +976,7 @@
       "Expansions   Goal Tests   New Nodes\n",
       "    43          56         180    \n",
       "\n",
-      "Plan length: 6  Time elapsed in seconds: 0.03049211599955015\n",
+      "Plan length: 6  Time elapsed in seconds: 0.03141521600082342\n",
       "Load(C1, P1, SFO)\n",
       "Load(C2, P2, JFK)\n",
       "Fly(P2, JFK, SFO)\n",
@@ -1035,17 +985,91 @@
       "Unload(C1, P1, JFK)\n",
       "\n",
       "\n",
-      "Solving Air Cargo Problem 1 using breadth_first_tree_search...\n",
+      "Solving Air Cargo Problem 1 using astar_search with h_ignore_preconditions...\n",
       "\n",
       "Expansions   Goal Tests   New Nodes\n",
-      "   1458        1459        5960   \n",
+      "    41          43         170    \n",
       "\n",
-      "Plan length: 6  Time elapsed in seconds: 0.9529927939993286\n",
+      "Plan length: 6  Time elapsed in seconds: 0.06203888300115068\n",
       "Load(C1, P1, SFO)\n",
+      "Fly(P1, SFO, JFK)\n",
+      "Unload(C1, P1, JFK)\n",
       "Load(C2, P2, JFK)\n",
       "Fly(P2, JFK, SFO)\n",
       "Unload(C2, P2, SFO)\n",
+      "\n",
+      "\n",
+      "Solving Air Cargo Problem 2 using breadth_first_search...\n",
+      "\n",
+      "Expansions   Goal Tests   New Nodes\n",
+      "   3346        4612       30534   \n",
+      "\n",
+      "Plan length: 9  Time elapsed in seconds: 14.21029247200022\n",
+      "Load(C1, P1, SFO)\n",
+      "Load(C2, P2, JFK)\n",
+      "Load(C3, P3, ATL)\n",
       "Fly(P1, SFO, JFK)\n",
+      "Unload(C1, P1, JFK)\n",
+      "Fly(P2, JFK, SFO)\n",
+      "Unload(C2, P2, SFO)\n",
+      "Fly(P3, ATL, SFO)\n",
+      "Unload(C3, P3, SFO)\n",
+      "\n",
+      "\n",
+      "Solving Air Cargo Problem 2 using astar_search with h_ignore_preconditions...\n",
+      "\n",
+      "Expansions   Goal Tests   New Nodes\n",
+      "   1506        1508       13820   \n",
+      "\n",
+      "Plan length: 9  Time elapsed in seconds: 13.803835380998862\n",
+      "Load(C3, P3, ATL)\n",
+      "Fly(P3, ATL, SFO)\n",
+      "Unload(C3, P3, SFO)\n",
+      "Load(C2, P2, JFK)\n",
+      "Fly(P2, JFK, SFO)\n",
+      "Unload(C2, P2, SFO)\n",
+      "Load(C1, P1, SFO)\n",
+      "Fly(P1, SFO, JFK)\n",
+      "Unload(C1, P1, JFK)\n",
+      "\n",
+      "\n",
+      "Solving Air Cargo Problem 3 using breadth_first_search...\n",
+      "\n",
+      "Expansions   Goal Tests   New Nodes\n",
+      "  14120       17673       124926  \n",
+      "\n",
+      "Plan length: 12  Time elapsed in seconds: 99.77857781799867\n",
+      "Load(C1, P1, SFO)\n",
+      "Load(C2, P2, JFK)\n",
+      "Fly(P1, SFO, ATL)\n",
+      "Load(C3, P1, ATL)\n",
+      "Fly(P2, JFK, ORD)\n",
+      "Load(C4, P2, ORD)\n",
+      "Fly(P1, ATL, JFK)\n",
+      "Unload(C1, P1, JFK)\n",
+      "Unload(C3, P1, JFK)\n",
+      "Fly(P2, ORD, SFO)\n",
+      "Unload(C2, P2, SFO)\n",
+      "Unload(C4, P2, SFO)\n",
+      "\n",
+      "\n",
+      "Solving Air Cargo Problem 3 using astar_search with h_ignore_preconditions...\n",
+      "\n",
+      "Expansions   Goal Tests   New Nodes\n",
+      "   5118        5120       45650   \n",
+      "\n",
+      "Plan length: 12  Time elapsed in seconds: 87.09942936799962\n",
+      "Load(C2, P2, JFK)\n",
+      "Fly(P2, JFK, ORD)\n",
+      "Load(C4, P2, ORD)\n",
+      "Fly(P2, ORD, SFO)\n",
+      "Unload(C4, P2, SFO)\n",
+      "Load(C1, P1, SFO)\n",
+      "Fly(P1, SFO, ATL)\n",
+      "Load(C3, P1, ATL)\n",
+      "Fly(P1, ATL, JFK)\n",
+      "Unload(C3, P1, JFK)\n",
+      "Unload(C2, P2, SFO)\n",
       "Unload(C1, P1, JFK)\n",
       "\n"
      ]
@@ -1127,7 +1151,7 @@
     "\n",
     "\n",
     "if __name__==\"__main__\":\n",
-    "    main([1],[1,2])"
+    "    main([1,2,3],[1,9])"
    ]
   }
  ],
