--- a/sudoku_solver.ipynb
+++ b/sudoku_solver.ipynb
@@ -20,14 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "rows = 'ABCDEFGHI'\n",
     "cols = '123456789'\n",
+    "\n",
     "\n",
     "def cross(a, b):\n",
     "    \"\"\"\n",
@@ -37,12 +36,15 @@
     "    \"\"\"\n",
     "    return [s + t for s in a for t in b]\n",
     "\n",
+    "\n",
     "boxes = cross(rows, cols)\n",
     "row_units = [cross(r, cols) for r in rows]\n",
     "column_units = [cross(rows, c) for c in cols]\n",
     "square_units = [cross(rs, cs) for rs in ('ABC', 'DEF', 'GHI') for cs in ('123', '456', '789')]\n",
-    "diagonal_units = [[r + c for r, c in zip(rows, cols)], [r + c for r, c in zip(rows, cols[::-1])]]\n",
-    "# [['A1', 'B2', 'C3', 'D4', 'E5', 'F6', 'G7', 'H8', 'I9'], ['A9', 'B8', 'C7', 'D6', 'E5', 'F4', 'G3', 'H2', 'I1']]\n",
+    "diagonal_units = [[r + c\n",
+    "                   for r, c in zip(rows, cols)], [r + c for r, c in zip(rows, cols[::-1])]]\n",
+    "# [['A1', 'B2', 'C3', 'D4', 'E5', 'F6', 'G7', 'H8', 'I9'],\n",
+    "# ['A9', 'B8', 'C7', 'D6', 'E5', 'F4', 'G3', 'H2', 'I1']]\n",
     "unitlist = row_units + column_units + square_units + diagonal_units\n",
     "units = dict((s, [u for u in unitlist if s in u]) for s in boxes)\n",
     "peers = dict((s, set(sum(units[s], [])) - {s}) for s in boxes)"
@@ -60,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def grid_values(grid):\n",
@@ -72,7 +72,8 @@
     "    Input:  grid(string) - A grid in string form.\n",
     "    Output: A grid in dictionary form\n",
     "                Keys: The boxes, e.g., 'A1'\n",
-    "                Values: The value in each box, e.g., '8'. If the box has no value, then the value will be '123456789'.\n",
+    "                Values: The value in each box, e.g., '8'. \n",
+    "                If the box has no value, then the value will be '123456789'.\n",
     "    \"\"\"\n",
     "    assert len(grid) == 81, \"Input grid must be a string of length 81 (9x9)\"\n",
     "    values = dict(zip(boxes, grid))\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -113,10 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def display(values):\n",
@@ -133,15 +132,14 @@
     "    width = 1 + max(len(val[s]) for s in boxes)\n",
     "    line = '+'.join(['-' * (width * 3)] * 3)\n",
     "    for r in rows:\n",
-    "        print(''.join(val[r + c].center(width) + ('|' if c in '36' else '')\n",
-    "                      for c in cols))\n",
+    "        print(''.join(val[r + c].center(width) + ('|' if c in '36' else '') for c in cols))\n",
     "        if r in 'CF':\n",
     "            print(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -175,16 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def eliminate(values):\n",
     "    \"\"\"\n",
-    "    Go through all the boxes, and whenever there is a box with a value, eliminate this value from the values of all its\n",
-    "     peers.\n",
+    "    Go through all the boxes, and whenever there is a box with a value, eliminate this value\n",
+    "    from the values of all its peers.\n",
     "    Input:  A sudoku in dictionary form.\n",
     "    Output: The resulting sudoku in dictionary form.\n",
     "    \"\"\"\n",
@@ -200,16 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def only_choice(values):\n",
     "    \"\"\"\n",
-    "    Go through all the units, and whenever there is a unit with a value that only fits in one box, assign the value to\n",
-    "     this box.\n",
+    "    Go through all the units, and whenever there is a unit with a value that only fits in one \n",
+    "    box, assign the value to this box.\n",
     "    Input:  A sudoku in dictionary form.\n",
     "    Output: The resulting sudoku in dictionary form.\n",
     "    \"\"\"\n",
@@ -225,10 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def naked_twins(values):\n",
@@ -245,7 +237,8 @@
     "                # pair of naked twins found\n",
     "                # getting its shared units:  usually one, although more is possible\n",
     "                shared_units = [x for x in units[box] if x in units[peer]]\n",
-    "                # For each cell in each shared unit, remove the two digits of the naked twins (except for the twins)\n",
+    "                # For each cell in each shared unit, remove the two digits of the naked twins\n",
+    "                # (except for the twins)\n",
     "                for shared_unit in shared_units:\n",
     "                    for b in shared_unit:\n",
     "                        if b != box and b != peer:\n",
@@ -266,10 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def reduce_puzzle(values):\n",
@@ -313,17 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def search(values):\n",
     "    \"\"\"\n",
     "    Using depth-first search and propagation, try all possible values\n",
     "    Input: A sudoku in dictionary form.\n",
-    "    Output: The resulting sudoku in dictionary form or False if there is a box with zero available values\n",
+    "    Output: The resulting sudoku in dictionary form or False if there is a box with zero \n",
+    "            available values\n",
     "    \"\"\"\n",
     "    # reduce the puzzle\n",
     "    values = reduce_puzzle(values)\n",
@@ -335,20 +325,19 @@
     "    # choose one of the unfilled squares with the fewest possibilities\n",
     "    _, s = min((len(values[s]), s) for s in boxes if len(values[s]) > 1)\n",
     "\n",
-    "    # solve recursively each one of the resulting sudokus; if one returns a value (not False), return the answer\n",
+    "    # solve recursively each one of the resulting sudokus; if one returns a value (not False),\n",
+    "    # return the answer\n",
     "    for value in values[s]:\n",
     "        new_sudoku = values.copy()\n",
     "        new_sudoku[s] = value\n",
     "        attempt = search(new_sudoku)\n",
     "        if attempt:\n",
-    "            return attempt\n",
-    "\n",
-    "\n"
+    "            return attempt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -421,10 +410,11 @@
     "    \"\"\"\n",
     "        Find the solution to a Sudoku grid.\n",
     "        Input:  grid(string): a string representing a sudoku grid.\n",
-    "                    Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3'\n",
-    "        Output: The dictionary representation of the final sudoku grid. False if no solution exists.\n",
+    "                Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52\n",
+    "                .............3'\n",
+    "        Output: The dictionary representation of the final sudoku grid. False if no solution.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    grid_sudoku = grid_values(sudoku)\n",
     "\n",
     "    print(\"\\n\\n  Sudoku:\\n\")\n",
@@ -437,9 +427,12 @@
     "    else:\n",
     "        print(\"\\n  Solution not found: \\n\")\n",
     "\n",
+    "\n",
     "# Add custom doagonal sudokus\n",
-    "sudokus = ['2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3',\n",
-    "            '.2.8..493...392........5...3...........451...........6...5........127...251..9.3.']\n",
+    "sudokus = [\n",
+    "    '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3',\n",
+    "    '.2.8..493...392........5...3...........451...........6...5........127...251..9.3.'\n",
+    "]\n",
     "\n",
     "for sudoku in sudokus:\n",
     "    solve(sudoku)"
@@ -462,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
