docs: Comment constraint propagation techniques used

--- a/sudoku_solver.ipynb
+++ b/sudoku_solver.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "#  Solve a diagonal Sudoku\n",
     "\n",
-    "Simple notebook version of the first project of Udacity's Artificial Intelligence Nanodegree\n",
+    "Notebook version of the [first project of Udacity's Artificial Intelligence Nanodegree](https://github.com/udacity/AIND-Sudoku)\n",
     "\n",
-    "Source: https://github.com/udacity/AIND-Sudoku"
+    "Goal: build an intelligent agent that solves every diagonal Sudoku\n",
+    "\n",
+    "Methods: Constraint Propagation and Search"
    ]
   },
   {
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +56,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The diagonal problem is also solved with constraint propagation. We add another unit constraint like the ones used for squares, columns, and rows. The diagonal boxes involved in any 3x3 Sudoku are: <br>\n",
+    "`(A1, B2, C3, D4, E5, F6, G7, H8, I9)` <br>\n",
+    "`(A9, B8, C7, D6, E5, F4, G3, H2, I1)` <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Input\n",
     "\n",
-    "A String representing a sudoku grid. Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3' <br>\n",
+    "A String representing a Sudoku grid. Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52.............3' <br>\n",
     "The function below translates the string into a useful dictionary grid variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def display(values):\n",
     "    \"\"\"\n",
     "    Display the values as a 2-D grid.\n",
-    "    Input:  values(dict): The sudoku in dictionary form\n",
+    "    Input:  values(dict): The Sudoku in dictionary form\n",
     "    \"\"\"\n",
     "    import copy\n",
     "    val = copy.copy(values)\n",
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +192,8 @@
     "    \"\"\"\n",
     "    Go through all the boxes, and whenever there is a box with a value, eliminate this value\n",
     "    from the values of all its peers.\n",
-    "    Input:  A sudoku in dictionary form.\n",
-    "    Output: The resulting sudoku in dictionary form.\n",
+    "    Input:  A Sudoku in dictionary form.\n",
+    "    Output: The resulting Sudoku in dictionary form.\n",
     "    \"\"\"\n",
     "    # get solved boxes (1 value)\n",
     "    solved = [box for box in values.keys() if len(values[box]) == 1]\n",
@@ -196,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +215,8 @@
     "    \"\"\"\n",
     "    Go through all the units, and whenever there is a unit with a value that only fits in one \n",
     "    box, assign the value to this box.\n",
-    "    Input:  A sudoku in dictionary form.\n",
-    "    Output: The resulting sudoku in dictionary form.\n",
+    "    Input:  A Sudoku in dictionary form.\n",
+    "    Output: The resulting Sudoku in dictionary form.\n",
     "    \"\"\"\n",
     "    for unit in unitlist:\n",
     "        for digit in '123456789':\n",
@@ -218,8 +229,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Constraint propagation to solve the naked twins problem\n",
+    "\n",
+    "I add a new process for reducing the puzzle following the same approach for solving a Sudoku on paper. For each box with two available values, I look for a peer (in a square, column, row, and diagonal) with the same values. If so, I discard both values from all the peers sharing the unit(s) with the twins.\n",
+    "\n",
+    "The steps followed are:\n",
+    "\n",
+    "1. Create a list of boxes with only two digits.\n",
+    "\n",
+    "2. Compare each two-digit box only with its peers\n",
+    "\n",
+    "3. In case a twin peer exists (with same two digits), get the shared units. There is always one shared unit at least since the two digits boxes are compared with peers. It's possible (but less frequent) that two or even three units (since we are using diagonals) are shared\n",
+    "\n",
+    "4. Remove the two digits of naked twins of every box sharing any unit with them. Naked twins boxes remain untouched.\n",
+    "\n",
+    "Another approach is using a dictionary of boxes with two only repeated values. Then, filter this dictionary by maintaining only twins sharing units, i.e., naked twins. Finally, apply the above step 4. Although less intuitive, this option could improve the execution time."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,10 +299,10 @@
     "    \"\"\"\n",
     "    Iterate eliminate(), only_choice(), and naked_twins().\n",
     "    If at some point, there is a box with no available values, return False.\n",
-    "    If the sudoku is solved, return the sudoku.\n",
-    "    If after an iteration of all the functions, the sudoku remains the same, return the sudoku.\n",
-    "    Input: A sudoku in dictionary form.\n",
-    "    Output: The resulting sudoku in dictionary form.\n",
+    "    If the Sudoku is solved, return the Sudoku.\n",
+    "    If after an iteration of all the functions, the Sudoku remains the same, return the Sudoku.\n",
+    "    Input: A Sudoku in dictionary form.\n",
+    "    Output: The resulting Sudoku in dictionary form.\n",
     "    \"\"\"\n",
     "\n",
     "    stalled = False\n",
@@ -304,15 +336,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search(values):\n",
     "    \"\"\"\n",
     "    Using depth-first search and propagation, try all possible values\n",
-    "    Input: A sudoku in dictionary form.\n",
-    "    Output: The resulting sudoku in dictionary form or False if there is a box with zero \n",
+    "    Input: A Sudoku in dictionary form.\n",
+    "    Output: The resulting Sudoku in dictionary form or False if there is a box with zero \n",
     "            available values\n",
     "    \"\"\"\n",
     "    # reduce the puzzle\n",
@@ -337,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,10 +441,10 @@
     "def solve(string_sudoku):\n",
     "    \"\"\"\n",
     "        Find the solution to a Sudoku grid.\n",
-    "        Input:  grid(string): a string representing a sudoku grid.\n",
+    "        Input:  grid(string): a string representing a Sudoku grid.\n",
     "                Example: '2.............62....1....7...6..8...3...9...7...6..4...4....8....52\n",
     "                .............3'\n",
-    "        Output: The dictionary representation of the final sudoku grid. False if no solution.\n",
+    "        Output: The dictionary representation of the final Sudoku grid. False if no solution.\n",
     "    \"\"\"\n",
     "\n",
     "    grid_sudoku = grid_values(sudoku)\n",
