docs: Clean Isolation  cells

--- a/isolation_player.ipynb
+++ b/isolation_player.ipynb
@@ -7,8 +7,8 @@
     "\n",
     "# Game-playing Agent\n",
     "\n",
-    "Notebook version solving the project '**Build a Game-playing Agent**' from Udacity's Artificial Intelligence Nanodegree <br>\n",
-    "Source: https://github.com/udacity/AIND-Isolation\n",
+    "Notebook version solving the project [Build a Game-playing Agent](https://github.com/udacity/AIND-Isolation) from [Udacity's Artificial Intelligence Nanodegree](https://www.udacity.com/course/artificial-intelligence-nanodegree--nd889) <br>\n",
+    "\n",
     "\n",
     "**Goal**: Implement an effective adversarial search agent to play the game **Isolation**\n",
     "\n",
@@ -35,9 +35,9 @@
     "starting position and initiative.\n",
     "\n",
     "For example, if the random moves chosen for initialization are (5, 2) and\n",
-    "(1, 3), then the first match will place agentA at (5, 2) as player 1 and\n",
-    "agentB at (1, 3) as player 2 then play to conclusion; the agents swap\n",
-    "initiative in the second match with agentB at (5, 2) as player 1 and agentA at\n",
+    "(1, 3), then the first match will place agent A at (5, 2) as player 1 and\n",
+    "agent B at (1, 3) as player 2 then play to conclusion; the agents swap\n",
+    "initiative in the second match with agent B at (5, 2) as player 1 and agent A at\n",
     "(1, 3) as player 2."
    ]
   },
@@ -52,17 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
     "\n",
+    "\n",
     "def null_score(game, player):\n",
-    "    \"\"\"This heuristic presumes no knowledge for non-terminal states, and\n",
-    "    returns the same uninformative value for all other states. \"\"\"\n",
+    "    \"\"\"This heuristic presumes no knowledge for non-terminal states, and returns the same\n",
+    "    uninformative value for all other states. \"\"\"\n",
     "\n",
     "    if game.is_loser(player):\n",
     "        return float(\"-inf\")\n",
@@ -72,8 +71,8 @@
     "\n",
     "\n",
     "def open_move_score(game, player):\n",
-    "    \"\"\"The basic evaluation function described in lecture that outputs a score\n",
-    "    equal to the number of moves open for your computer player on the board. \"\"\"\n",
+    "    \"\"\"The basic evaluation function dthat outputs a score equal to the number of moves open\n",
+    "    for your computer player on the board. \"\"\"\n",
     "\n",
     "    if game.is_loser(player):\n",
     "        return float(\"-inf\")\n",
@@ -83,10 +82,9 @@
     "\n",
     "\n",
     "def improved_score(game, player):\n",
-    "    \"\"\"The \"Improved\" evaluation function discussed in lecture that outputs a\n",
-    "    score equal to the difference in the number of moves available to the\n",
-    "    two players.   \"\"\"\n",
-    "    \n",
+    "    \"\"\"The \"Improved\" evaluation function that outputs a score equal to the difference in the \n",
+    "    number of moves available to the two players. \"\"\"\n",
+    "\n",
     "    if game.is_loser(player):\n",
     "        return float(\"-inf\")\n",
     "    if game.is_winner(player):\n",
@@ -108,14 +106,12 @@
     "\n",
     "\n",
     "class GreedyPlayer():\n",
-    "    \"\"\"Player that chooses next move to maximize heuristic score. This is\n",
-    "    equivalent to a minimax search agent with a search depth of one.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Player that chooses next move to maximize heuristic score. This is  equivalent to a\n",
+    "    minimax search agent with a search depth of one.  \"\"\"\n",
     "\n",
     "    def __init__(self, score_fn=open_move_score):\n",
     "        self.score = score_fn\n",
     "\n",
-    "        \n",
     "    def get_move(self, game, legal_moves, time_left):\n",
     "\n",
     "        if not legal_moves:\n",
@@ -219,12 +215,12 @@
     "\n",
     "    # This easy killing move  can also be predicted:\n",
     "    # Lock the opponent if, in your turn, you can get to its unique move\n",
-    "    if (player == game.active_player and opp_moves == 1 and\n",
-    "        opp_moves_list[0] in own_moves_list):\n",
+    "    if (player == game.active_player and opp_moves == 1\n",
+    "            and opp_moves_list[0] in own_moves_list):\n",
     "        return float(\"inf\")\n",
     "    # opposite case\n",
-    "    if (player != game.active_player and own_moves == 1 and\n",
-    "        own_moves_list[0] in opp_moves_list):\n",
+    "    if (player != game.active_player and own_moves == 1\n",
+    "            and own_moves_list[0] in opp_moves_list):\n",
     "        return float(\"-inf\")\n",
     "\n",
     "    # heuristic values for the rest of the cases\n",
@@ -232,7 +228,7 @@
     "    own_mobility = own_moves / blank_spaces\n",
     "    opp_mobility = opp_moves / blank_spaces\n",
     "\n",
-    "    score = 10*(own_mobility - opp_mobility) + own_moves\n",
+    "    score = 10 * (own_mobility - opp_mobility) + own_moves\n",
     "\n",
     "    return float(score)"
    ]
@@ -285,15 +281,18 @@
     "        timer expires.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, search_depth=3, score_fn=custom_score,\n",
-    "                 iterative=True, method='minimax', timeout=10.):\n",
+    "    def __init__(self,\n",
+    "                 search_depth=3,\n",
+    "                 score_fn=custom_score,\n",
+    "                 iterative=True,\n",
+    "                 method='minimax',\n",
+    "                 timeout=10.):\n",
     "        self.search_depth = search_depth\n",
     "        self.iterative = iterative\n",
     "        self.score = score_fn\n",
     "        self.method = method\n",
     "        self.time_left = None\n",
     "        self.TIMER_THRESHOLD = timeout\n",
-    "\n",
     "\n",
     "    def get_move(self, game, legal_moves, time_left):\n",
     "        \"\"\"Search for the best move from the available legal moves and return a\n",
@@ -345,7 +344,7 @@
     "                    # No need to wait for Timeout if an optimal move is reached\n",
     "                    if score == float('inf'):\n",
     "                        return move\n",
-    "            else:   # Depth-first search\n",
+    "            else:  # Depth-first search\n",
     "                if self.method == 'minimax':\n",
     "                    _, move = self.minimax(game, self.search_depth)\n",
     "                elif self.method == 'alphabeta':\n",
@@ -357,7 +356,6 @@
     "        # Return the best move from the last completed search iteration\n",
     "        return move\n",
     "\n",
-    "\n",
     "    def minimax(self, game, depth, maximizing_player=True):\n",
     "        \"\"\"Implement the minimax search algorithm as described in the lectures.\n",
     "\n",
@@ -367,7 +365,6 @@
     "            An instance of the Isolation game `Board` class representing the\n",
     "            current game state\n",
     "\n",
-    "        depth : int\n",
     "        depth : int\n",
     "            Depth is an integer representing the maximum number of plies to\n",
     "            search in the game tree before aborting\n",
@@ -408,17 +405,20 @@
     "        if maximizing_player:\n",
     "            # MAX-VALUE node: Get the maximum value from the MIN-VALUE nodes of\n",
     "            #  its next level\n",
-    "            score, move = max([(self.minimax(game.forecast_move(m),\n",
-    "                depth, False)[0], m) for m in legal_moves])\n",
+    "            score, move = max([(self.minimax(game.forecast_move(m), depth, False)[0], m)\n",
+    "                               for m in legal_moves])\n",
     "        else:\n",
     "            # MIN-VALUE node: Get the minimum value from the MAX-VALUE nodes of\n",
     "            #  its next level\n",
-    "            score, move = min([(self.minimax(game.forecast_move(m),\n",
-    "                depth, True)[0], m) for m in legal_moves])\n",
+    "            score, move = min([(self.minimax(game.forecast_move(m), depth, True)[0], m)\n",
+    "                               for m in legal_moves])\n",
     "        return score, move\n",
     "\n",
-    "\n",
-    "    def alphabeta(self, game, depth, alpha=float(\"-inf\"), beta=float(\"inf\"),\n",
+    "    def alphabeta(self,\n",
+    "                  game,\n",
+    "                  depth,\n",
+    "                  alpha=float(\"-inf\"),\n",
+    "                  beta=float(\"inf\"),\n",
     "                  maximizing_player=True):\n",
     "        \"\"\"Implement minimax search with alpha-beta pruning as described in the\n",
     "        lectures.\n",
@@ -454,7 +454,6 @@
     "        if self.time_left() < self.TIMER_THRESHOLD:\n",
     "            raise Timeout()\n",
     "\n",
-    "\n",
     "        legal_moves = game.get_legal_moves()\n",
     "        move = (-1, -1)\n",
     "        score = None\n",
@@ -479,8 +478,7 @@
     "            for m in legal_moves:\n",
     "                # evaluate the next level of m (minimizing player)\n",
     "                #  and return its scores dictionary\n",
-    "                scores[m], _ = self.alphabeta(game.forecast_move(m), depth,\n",
-    "                                              alpha, beta, False)\n",
+    "                scores[m], _ = self.alphabeta(game.forecast_move(m), depth, alpha, beta, False)\n",
     "                # get the max value of the resulted scores dictionary for the\n",
     "                #  current level(maximizing player)\n",
     "                move = max(scores, key=scores.get)\n",
@@ -500,8 +498,7 @@
     "            for m in legal_moves:  # MIN-VALUE node\n",
     "                # evaluate the next level of m (maximizing player) and return\n",
     "                #  its scores dictionary\n",
-    "                scores[m], _ = self.alphabeta(game.forecast_move(m), depth,\n",
-    "                                              alpha, beta, True)\n",
+    "                scores[m], _ = self.alphabeta(game.forecast_move(m), depth, alpha, beta, True)\n",
     "                # get the min value of the resulted scores dictionary for the\n",
     "                #  current level(minimizing player)\n",
     "                move = min(scores, key=scores.get)\n",
@@ -553,8 +550,8 @@
     "                  \"increase this margin to avoid timeouts during  \" + \\\n",
     "                  \"tournament play.\"\n",
     "\n",
-    "\n",
     "Agent = namedtuple(\"Agent\", [\"player\", \"name\"])\n",
+    "\n",
     "\n",
     "class Timeout(Exception):\n",
     "    \"\"\"Subclass base exception for code clarity.\"\"\"\n",
@@ -656,8 +653,8 @@
     "\n",
     "        wins += counts[agent_1.player]\n",
     "\n",
-    "        print(\"\\tResult: {} to {}\".format(int(counts[agent_1.player]),\n",
-    "                                          int(counts[agent_2.player])))\n",
+    "        print(\"\\tResult: {} to {}\".format(\n",
+    "            int(counts[agent_1.player]), int(counts[agent_2.player])))\n",
     "\n",
     "    return 100. * wins / total"
    ]
@@ -746,18 +743,18 @@
     }
    ],
    "source": [
-    "HEURISTICS = [(\"Null\", null_score),\n",
-    "                  (\"Open\", open_move_score),\n",
-    "                  (\"Improved\", improved_score)]\n",
+    "HEURISTICS = [(\"Null\", null_score), (\"Open\", open_move_score), (\"Improved\", improved_score)]\n",
     "AB_ARGS = {\"search_depth\": 5, \"method\": 'alphabeta', \"iterative\": False}\n",
     "MM_ARGS = {\"search_depth\": 3, \"method\": 'minimax', \"iterative\": False}\n",
     "CUSTOM_ARGS = {\"method\": 'alphabeta', 'iterative': True}\n",
     "\n",
-    "# Create a collection of CPU agents \n",
-    "mm_agents = [Agent(CustomPlayer(score_fn=h, **MM_ARGS),\n",
-    "                   \"MM_\" + name) for name, h in HEURISTICS]\n",
-    "ab_agents = [Agent(CustomPlayer(score_fn=h, **AB_ARGS),\n",
-    "                   \"AB_\" + name) for name, h in HEURISTICS]\n",
+    "# Create a collection of CPU agents\n",
+    "mm_agents = [\n",
+    "    Agent(CustomPlayer(score_fn=h, **MM_ARGS), \"MM_\" + name) for name, h in HEURISTICS\n",
+    "]\n",
+    "ab_agents = [\n",
+    "    Agent(CustomPlayer(score_fn=h, **AB_ARGS), \"AB_\" + name) for name, h in HEURISTICS\n",
+    "]\n",
     "random_agents = [Agent(RandomPlayer(), \"Random\")]\n",
     "\n",
     "# ID_Improved agent is used for comparison to the performance of the\n",
@@ -765,8 +762,10 @@
     "# systems; i.e., the performance of the student agent is considered\n",
     "# relative to the performance of the ID_Improved agent to account for\n",
     "# faster or slower computers.\n",
-    "test_agents = [Agent(CustomPlayer(score_fn=improved_score, **CUSTOM_ARGS), \"ID_Improved\"),\n",
-    "               Agent(CustomPlayer(score_fn=custom_score, **CUSTOM_ARGS), \"Student\")]\n",
+    "test_agents = [\n",
+    "    Agent(CustomPlayer(score_fn=improved_score, **CUSTOM_ARGS), \"ID_Improved\"),\n",
+    "    Agent(CustomPlayer(score_fn=custom_score, **CUSTOM_ARGS), \"Student\")\n",
+    "]\n",
     "\n",
     "for agentUT in test_agents:\n",
     "    print(\"\")\n",
@@ -779,7 +778,7 @@
     "\n",
     "    print(\"\\n\\nResults:\")\n",
     "    print(\"----------\")\n",
-    "    print(\"{!s:<15}{:>10.2f}%\".format(agentUT.name, win_ratio))\n"
+    "    print(\"{!s:<15}{:>10.2f}%\".format(agentUT.name, win_ratio))"
    ]
   }
  ],
@@ -799,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
