docs: Improve noteboook readability

--- a/isolation_player.ipynb
+++ b/isolation_player.ipynb
@@ -53,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from random import randint\n",
@@ -153,16 +155,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Custom heuristic score: Lock, mobility, and moves with tuned linear function\n",
+    "## Custom heuristic score: Lock, mobility, and moves with a tuned linear function\n",
     "\n",
     "\n",
-    "Zero sum function based on player’s mobility (moves / blank_spaces ), and also predicting if one player can lock the other in its next ply:\n",
+    "Zero-sum function based on player’s mobility (moves / blank_spaces ), also predicting if one player can lock the other in its next ply:\n",
     "\n",
-    "- Predict if the player is about to win or lose in the next play when any player has no move available for its next play (cases not detected by game.is_winner() or game.is_loser() due their inactive/active player condition): +inf, -inf\n",
+    "- Predict if the player is about to win or lose when the adversary has no move available for its next play: +inf, -inf <br> This case is  not detected by game.is_winner() or game.is_loser() due their inactive/active player condition.\n",
     "\n",
-    "- Predict, when a player only has one move available, if the other can reach  that cell before by looking among its available moves, thus finishing the   game: +inf, inf\n",
+    "- Predict if a player can reach the unique move available to the adversary, thus winning the game: +inf, inf\n",
     "\n",
-    "- The usual scenario is valued as: `score = A * own_mobility + B * opp_mobility + C * own_moves + D * opp_moves`, being the mobility defined as the ratio between the available move for the player and the total available cells of the board, thus the value for looking for more legal moves will be increased when the game is about to end for lack of empty cells. After a few tournaments, the selected parameters were: `A = 10, B = -10, C = 1, D = 0`\n",
+    "- The usual scenario is valued as: `score = A * own_mobility + B * opp_mobility + C * own_moves + D * opp_moves`. Mobility is defined as the ratio between the available move of the player and the total available cells of the board. Thus the value of looking for more legal moves will be increased when the game is about to end due to lack of empty cells. After a few tournaments, the selected parameters were tuned to: `A = 10, B = -10, C = 1, D = 0`\n",
     "\n"
    ]
   },
@@ -798,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
