docs: Simplify introductions and results

--- a/2_isolation_player.ipynb
+++ b/2_isolation_player.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "# Game-playing Agent\n",
     "\n",
-    "Notebook version solving the project [Build a Game-playing Agent](https://github.com/udacity/AIND-Isolation) from [Udacity's Artificial Intelligence Nanodegree](https://www.udacity.com/course/artificial-intelligence-nanodegree--nd889) <br>\n",
+    "Notebook version of the project [Build a Game-playing Agent](https://github.com/udacity/AIND-Isolation) from [Udacity's Artificial Intelligence Nanodegree](https://www.udacity.com/course/artificial-intelligence-nanodegree--nd889) <br>\n",
     "\n",
     "\n",
     "**Goal**: Implement an effective adversarial search agent to play the game **Isolation**\n",
@@ -800,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
