--- a/3_planning_agent.ipynb
+++ b/3_planning_agent.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Planning Search Agent\n",
     "\n",
-    "Notebook version solving the project **'Implement a Planning Search'** from Udacity's Artificial Intelligence Nanodegree <br>\n",
-    "\n",
-    "Source: https://github.com/udacity/AIND-Planning\n",
+    "Notebook version of the project [Implement a Planning Search](https://github.com/udacity/AIND-Planning) from [Udacity's Artificial Intelligence Nanodegree](https://www.udacity.com/course/artificial-intelligence-nanodegree--nd889) <br>\n",
     "\n",
     "**Goal**: Solve deterministic logistics planning problems for an Air Cargo transport system using a planning search agent\n",
     "\n",
@@ -1171,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
